:sparkles: Users endpoints
